# susumu

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MASTER_TODO.md  README.md  RUST_IMPLEMENTATION_SUMMARY.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml  build-wasm.sh
core/src/: ast.rs  builtins.rs  environment.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  parser.rs.backup  python.rs  tests.rs  types.rs  visual_debug.rs  wasm.rs
docs/: DOCUMENTATION_SITE_PLAN.md  visual_debugger_concept.md  visual_debugging_walkthrough.md
examples/: README.md  arrow_convergence.susu  comprehensive_syntax_test.susu  ecommerce_order_processing.susu  future_vision_showcase.susu  hello_world.susu  math_pipeline.susu  order_service.susu  pattern_matching.susu  payment_module.susu  utility_module.susu  visual_debug_demo.susu
stdlib/: README.md  array.susu  crypto.susu  data.susu  fs.susu  math.susu  net.susu  string.susu
vscode-extension/: .vscodeignore  BETTER_TESTING_APPROACH.md  BUILD.md  DEVELOPMENT.md  LICENSE  README.md  TESTING_GUIDE.md  build.sh  debug-grammar-loading.js  grammar-validator.js  language-configuration.json  package-lock.json  package.json  test-real-file.js  test-syntax-patterns.js
vscode-extension/snippets/: susumu.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: susumu-fixed.tmLanguage.json  susumu-minimal.tmLanguage.json  susumu.tmLanguage.json
